gap fix

--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -11,7 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  gap: 20px;
+  gap: 14px;
   color: #DE8E59;
   margin-bottom: var(--timeline-after-lead-section-margin);
 }
